--- a/udagram/network.yml
+++ b/udagram/network.yml
@@ -177,4 +177,43 @@ Resources:
 
 # Export outputs to be used by another stack
 Outputs:
-  
+  VPC:
+    Value: !Ref UdagramVPC
+    Export:
+      Name: !Sub ${EnvironmentName}-VPCID
+  VPCPublicRouteTable:
+    Value: !Ref PublicRouteTable
+    Export:
+      Name: !Sub ${EnvironmentName}-Public-RouteTable
+  VPCPrivateRouteTable1:
+    Value: !Ref PrivateRouteTable1
+    Export:
+      Name: !Sub ${EnvironmentName}-Private-RouteTable1
+  VPCPrivateRouteTable2:
+    Value: !Ref PrivateRouteTable2
+    Export:
+      Name: !Sub ${EnvironmentName}-Private-RouteTable2
+  PublicSubnets:
+    Value: !Join [",",[!Ref PublicSubnet1,!Ref PublicSubnet2]]
+    Export:
+      Name: !Sub ${EnvironmentName}-Public-Subnets
+  PrivateSubnets:
+    Value: !Join [",",[!Ref PrivateSubnet1,!Ref PrivateSubnet2]]
+    Export:
+      Name: !Sub ${EnvironmentName}-Private-Subnets
+  PublicSubnet1:
+    Value: !Ref PublicSubnet1
+    Export:
+      Name: !Sub ${EnvironmentName}-Public-Subnet1
+  PublicSubnet2:
+    Value: !Ref PublicSubnet2
+    Export:
+      Name: !Sub ${EnvironmentName}-Public-Subnet2
+  PrivateSubnet1:
+    Value: !Ref PrivateSubnet1
+    Export:
+      Name: !Sub ${EnvironmentName}-Private-Subnet1
+  PrivateSubnet2:
+    Value: !Ref PrivateSubnet2
+    Export:
+      Name: !Sub ${EnvironmentName}-Private-Subnet2
